created basic entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ database.ip = ${DB_IP:localhost}
 database.port = ${DB_PORT:5432}
 database.user = ${DB_USER:postgres}
 database.password = ${DB_PASSWORD:admin}
-database.name = ${DB_DBNAME:city-db}
+database.name = ${DB_DBNAME:eup-db}
 
 
-spring.datasource.platform=postgres
+spring.sql.init.platform=postgres
 spring.datasource.url = jdbc:postgresql://${database.ip}:${database.port}/${database.name}
 spring.datasource.username = ${database.user}
 spring.datasource.password = ${database.password}
