--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ test:
   stage: test
   image: maven:3.8.1-openjdk-17-slim
   script:
-    - echo "Test DEMO app"
+    - echo "Test EnergyUtilityPlatform app"
     - mvn test && mvn jacoco:report
     - cat target/site/jacoco/index.html | grep -o '.*'
   coverage: "/Total.*?([0-9]{1,3})%/"
