--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,3 +49,5 @@ spring.rabbitmq.virtual-host=itqmbicg
 spring.rabbitmq.password=uAuH3d7-yCJfBNH_SNOXj93i4hP3KHBC
 spring.rabbitmq.requested-heartbeat=30
 spring.rabbitmq.connection-timeout=30000
+
+#spring.aop.auto=false
