--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,23 @@
 			<artifactId>spring-messaging</artifactId>
 			<version>4.2.4.RELEASE</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
+<!--		<dependency>-->
+<!--		<groupId>org.springframework</groupId>-->
+<!--		<artifactId>spring-aop</artifactId>-->
+<!--		<version>4.2.0.RELEASE</version>-->
+<!--		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-messaging -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+			<version>5.3.12</version>
+		</dependency>
 
 
 	</dependencies>
