added hessian config

--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
 			<version>5.3.12</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.caucho</groupId>
+			<artifactId>hessian</artifactId>
+			<version>4.0.51</version>
+		</dependency>
 
 	</dependencies>
 
